[gd_scene load_steps=2 format=3 uid="uid://bk2gll5whs4jm"]

[ext_resource type="Script" path="res://src/main/scene/component/pending/pending.gd" id="1_y48d3"]

[node name="pending" type="PanelContainer"]
offset_right = 325.0
offset_bottom = 100.0
size_flags_vertical = 3
script = ExtResource("1_y48d3")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="item_container" type="HFlowContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="group_dialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(400, 150)

[node name="HBoxContainer" type="HBoxContainer" parent="group_dialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 101.0

[node name="Label" type="Label" parent="group_dialog/HBoxContainer"]
layout_mode = 2
text = "group name: "

[node name="group_name_edit" type="LineEdit" parent="group_dialog/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="item_popup_menu" type="PopupMenu" parent="."]
unique_name_in_owner = true

[node name="panel_popup_menu" type="PopupMenu" parent="."]
unique_name_in_owner = true

[node name="prompt_label" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
text = "待处理图像"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="confirmed" from="group_dialog" to="." method="_on_group_dialog_confirmed"]
[connection signal="index_pressed" from="item_popup_menu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="index_pressed" from="panel_popup_menu" to="." method="_on_panel_popup_menu_index_pressed"]
